[package]
name = "xlsx-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.21.0"
clap = { version = "4.3.3", features = ["derive", "env"] }
color-eyre = "0.6.2"
indicatif = "0.17.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tiktoken-rs = "0.4.2"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
xlsxwriter = "0.6.0"
